[gd_scene load_steps=2 format=3 uid="uid://o5am70o2ihbm"]

[ext_resource type="Script" path="res://UI/resource_counter.gd" id="1_fhmil"]

[node name="CounterNode" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fhmil")

[node name="TitleTextContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 110.0
offset_bottom = 25.0

[node name="TitleText" type="RichTextLabel" parent="TitleTextContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 17
text = "Water"

[node name="PlusButton" type="Button" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 50.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 25
text = "+"

[node name="MinusButton" type="Button" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 30.0
offset_right = 110.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 25
text = "-"

[node name="CounterTextContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = 85.0
offset_right = 110.0
offset_bottom = 135.0

[node name="CounterText" type="RichTextLabel" parent="CounterTextContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
text = "0"

[connection signal="pressed" from="PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="MinusButton" to="." method="_on_minus_button_pressed"]
